# game-of-life

./: Cargo.toml  config.json  config.toml
src/: config.rs  config.toml  grid.rs  main.rs  terminal.rs
src/grid/: cell.rs  directions.rs  grid_display.rs  grid_init.rs
